JavaScriptCore/wtf/RefPtr.h
@@ -74,7 +74,9 @@ namespace WTF {
         RefPtr& operator=(T*);
         RefPtr& operator=(const PassRefPtr<T>&);
         RefPtr& operator=(const NonNullPassRefPtr<T>&);
+#if !HAVE(NULLPTR)
         RefPtr& operator=(std::nullptr_t) { clear(); return *this; }
+#endif
         template<typename U> RefPtr& operator=(const RefPtr<U>&);
         template<typename U> RefPtr& operator=(const PassRefPtr<U>&);
         template<typename U> RefPtr& operator=(const NonNullPassRefPtr<U>&);
